# pushups

./: README.md  data.json  finished.toml  plotter.js  pushups.py  pyproject.toml  test_json.py  test_toml.py  tracker.html
